--- a/static/css/demo.css
+++ b/static/css/demo.css
@@ -65,3 +65,45 @@ p{
 .control.next{
     right: 5px;
 }
+.roll_col{
+    width: 100%;
+    height: 200px;
+    overflow: hidden;
+}
+.h600{
+    height: 600px;
+}
+.roll_col li{
+    display: block;
+    height: 200px;
+    line-height: 200px;
+    font-size: 30px;
+    font-weight: bold;
+    text-align: center;
+    color: #fff;
+    background-color: #ff9900;
+}
+.roll_col .li-2{
+    background-color: #0099ff;
+}
+.roll_col .li-3{
+    background-color: #ff0099;
+}
+.roll_col .li-4{
+    background-color: #00ff99;
+}
+.roll_col .control{
+    top: 80px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
